--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,24 +4,24 @@ body {
     background: url("images/minecraft.png") no-repeat center center fixed;
     background-size: cover;
     height: auto;
-    width: 1900px;
+    width: 90%;
 }
 
 .subTitle {
     font-family: 'Minecraftia', sans-serif;
-    font-size: 400px;
+    font-size: 100px;
     color: rgba(255, 16, 62, 0.44);
     text-shadow: 0px 0px 10px;
     position: relative;
-    top: -100px;
     left: 50px;
+    width: auto;
 }
 
 .gitBut {
     position: relative;
-    top: 5000px;
+    top: 200px;
     left: 100px;
-    font-size: 100px;
+    font-size: 25px;
     font-family: 'Minecraftia', sans-serif;
     background: linear-gradient(307deg, rgba(0, 255, 187, 0.92) 0%, rgba(0, 255, 4, 0.92) 35%, rgba(0, 212, 255, 1) 100%);
     border-radius: 40px;
