--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -22,16 +22,25 @@ body {
     top: 200px;
     left: 100px;
     font-size: 25px;
+    margin: 2px;
     font-family: 'Minecraftia', sans-serif;
-    background: linear-gradient(307deg, rgba(0, 255, 187, 0.92) 0%, rgba(0, 255, 4, 0.92) 35%, rgba(0, 212, 255, 1) 100%);
+    background: linear-gradient(307deg, rgba(0, 255, 187, 30%) 0%, rgba(0, 255, 4, 30%) 35%, rgba(0, 212, 255, 30%) 100%);
     border-radius: 40px;
     padding-left: 20px;
     padding-right: 20px;
+    color: yellow;
     transition-duration: 0.4s;
 }
 
 .gitBut:hover {
     transform: scale(1.1);
+    background: linear-gradient(307deg, rgba(0, 255, 111, 0.6) 0%, rgba(0, 255, 4, 0.6) 35%, rgba(0, 212, 255, 0.6) 100%);
+
+}
+
+.gitBut:active {
+    transform: scale(0.9);
+    background: linear-gradient(307deg, rgba(0, 255, 111, 0.92) 0%, rgba(0, 255, 4, 0.92) 35%, rgba(0, 212, 255, 1) 100%);
 }
 
 
